--- a/sails-bin/templates/admin/orders.html
+++ b/sails-bin/templates/admin/orders.html
@@ -25,11 +25,11 @@
       <tbody>
 	{% for order in paid_tx %}
 	<tr>
-	  <th scope="row"><a href="/orders/order_info?order_id={{ order.1.get_id() }}">{{order.1.get_shortid()}}</a></th>
-	  <td><a href="/market/book_info?book_id={{ order.1.get_product() }}">{{order.0.get_shortid()}}</a></td>
+	  <th scope="row"><a href="{{ uri!("/orders", crate::orders::order_info_buyer(order.1.get_id())) }}">{{order.1.get_shortid()}}</a></th>
+	  <td><a href="{{ uri!("/market", crate::market::book_page_owned(order.1.get_product())) }}">{{order.0.get_shortid()}}</a></td>
 	  <td>{{order.0.get_prodname()}}</td>
 	  <td>{{order.1.get_buyer()}}</td>
-	  <td><a href="/admin/refund_order?order_id={{order.1.get_id()}}" class="btn btn-warning" role="button">Refund</a> <a href="/admin/finish_order?order_id={{order.1.get_id()}}" class="btn btn-success" role="button">Finish</a></td>
+	  <td><a href="{{ uri!("/admin", crate::admin::refund_order(order.1.get_id())) }}" class="btn btn-warning" role="button">Refund</a> <a href="{{ uri!("/admin", crate::admin::finish_order(order.1.get_id())) }}" class="btn btn-success" role="button">Finish</a></td>
 	</tr>
 	{% endfor %}
       </tbody>
@@ -59,11 +59,11 @@
       <tbody>
 	{% for order in placed_tx %}
 	<tr>
-	  <th scope="row"><a href="/orders/order_info?order_id={{ order.1.get_id() }}">{{order.1.get_shortid()}}</a></th>
-	  <td><a href="/market/book_info?book_id={{ order.1.get_product() }}">{{order.0.get_shortid()}}</a></td>
+	  <th scope="row"><a href="{{ uri!("/orders", crate::orders::order_info_buyer(order.1.get_id())) }}">{{order.1.get_shortid()}}</a></th>
+	  <td><a href="{{ uri!("/market", crate::market::book_page_owned(order.1.get_product())) }}">{{order.0.get_shortid()}}</a></td>
 	  <td>{{order.0.get_prodname()}}</td>
 	  <td>{{order.1.get_buyer()}}</td>
-	  <td><a href="/admin/refund_order?order_id={{order.1.get_id()}}" class="btn btn-warning" role="button">Cancel</a></td>
+	  <td><a href="{{ uri!("/admin", crate::admin::refund_order(order.1.get_id())) }}" class="btn btn-warning" role="button">Cancel</a></td>
 	</tr>
 	{% endfor %}
       </tbody>
@@ -92,8 +92,8 @@
       <tbody>
 	{% for order in refunded_tx %}
 	<tr>
-	  <th scope="row"><a href="/orders/order_info?order_id={{ order.1.get_id() }}">{{order.1.get_shortid()}}</a></th>
-	  <td><a href="/market/book_info?book_id={{ order.1.get_product() }}">{{order.0.get_shortid()}}</a></td>
+	  <th scope="row"><a href="{{ uri!("/orders", crate::orders::order_info_buyer(order.1.get_id())) }}">{{order.1.get_shortid()}}</a></th>
+	  <td><a href="{{ uri!("/market", crate::market::book_page_owned(order.1.get_product())) }}">{{order.0.get_shortid()}}</a></td>
 	  <td>{{order.0.get_prodname()}}</td>
 	  <td>{{order.1.get_buyer()}}</td>
 	</tr>
@@ -126,11 +126,11 @@
       <tbody>
 	{% for order in finished_tx %}
 	<tr>
-	  <th scope="row"><a href="/orders/order_info?order_id={{ order.1.get_id() }}">{{order.1.get_shortid()}}</a></th>
-	  <td><a href="/market/book_info?book_id={{ order.1.get_product() }}">{{order.0.get_shortid()}}</a></td>
+	  <th scope="row"><a href="{{ uri!("/orders", crate::orders::order_info_buyer(order.1.get_id())) }}">{{order.1.get_shortid()}}</a></th>
+	  <td><a href="{{ uri!("/market", crate::market::book_page_owned(order.1.get_product())) }}">{{order.0.get_shortid()}}</a></td>
 	  <td>{{order.0.get_prodname()}}</td>
 	  <td>{{order.1.get_buyer()}}</td>
-	  <td><a href="/admin/refund_order?order_id={{order.1.get_id()}}" class="btn btn-warning" role="button">Cancel</a></td>
+	  <td><a href="{{ uri!("/admin", crate::admin::refund_order(order.1.get_id())) }}" class="btn btn-warning" role="button">Cancel</a></td>
 	</tr>
 	{% endfor %}
       </tbody>
