--- a/sails-bin/templates/book_list.html
+++ b/sails-bin/templates/book_list.html
@@ -10,8 +10,8 @@
     <tbody>
       {% for book in books %}
       <tr>
-	<th scope="row"><a href="/market/book_info?book_id={{ book.0.get_id() }}">{{book.0.get_shortid()}}</a></th>
-	<td><a href="/market/book_info?book_id={{ book.0.get_id() }}">{{book.0.get_prodname()}}</a></td>
+	<th scope="row"><a href="{{ uri!("/market", crate::market::book_page_owned(book.0.get_id())) }}">{{book.0.get_shortid()}}</a></th>
+	<td><a href="{{ uri!("/market", crate::market::book_page_owned(book.0.get_id())) }}">{{book.0.get_prodname()}}</a></td>
 	{% match book.1 %}
 	{% when Some with (ctg) %}
 	<td>{{ctg.name()}}</td>
