--- a/sails-bin/templates/market/book_info_owned.html
+++ b/sails-bin/templates/market/book_info_owned.html
@@ -21,8 +21,8 @@
 {% endblock seller %}
 
 {% block actions %}
-<a href="post_book?book_id={{book.get_id()}}" class="btn btn-primary" role="button">更新</a>
-<a href="instruction?book_id={{book.get_id()}}" class="btn btn-warning" role="button">指南</a>
-<a href="delete?book_id={{book.get_id()}}" class="btn btn-danger" role="button" onclick="return confirm('Please confirm your action');">删除</a>
-<a href="/orders/purchase?book_id={{book.get_id()}}" class="btn btn-primary" role="button" onclick="return confirm('Do you really want to purchase it?');"><i class="bi bi-credit-card"></i> 购买</a>
+<a href="{{ uri!("/market", crate::market::update_book_page(self.book.get_id())) }}" class="btn btn-primary" role="button">更新</a>
+<a href="{{ uri!("/market", crate::market::instruction(self.book.get_id())) }}" class="btn btn-warning" role="button">指南</a>
+<a href="{{ uri!("/market", crate::market::delete_book(self.book.get_id())) }}" class="btn btn-danger" role="button" onclick="return confirm('Please confirm your action');">删除</a>
+<a href="{{ uri!("/orders", crate::orders::purchase(self.book.get_id())) }}" class="btn btn-primary" role="button" onclick="return confirm('Do you really want to purchase it?');"><i class="bi bi-credit-card"></i> 购买</a>
 {% endblock actions %}
