--- a/sails-bin/templates/market/deposit.html
+++ b/sails-bin/templates/market/deposit.html
@@ -27,7 +27,7 @@
 	<b>创建交易错误，请联系客服</b>: {{ err }}
       </div>
       {% endmatch %}
-      <a href="/market/deposit_progress?book_id={{book.get_id()}}" class="btn btn-success" role="button">下一步</a>
+      <a href="{{ uri!("/market", crate::market::deposit_progress(self.book.get_id())) }}" class="btn btn-success" role="button">下一步</a>
 
 
       {% when sails_db::enums::ProductStatus::Verified %}
@@ -61,7 +61,7 @@
     </tr>
     <tr>
       <th scope="row">书本 ID</th>
-      <td><a href="/market/book_info?book_id={{ book.get_id() }}">{{ book.get_shortid() }}</a></td>
+      <td><a href="{{ uri!("/market", crate::market::book_page_owned(self.book.get_id())) }}">{{ book.get_shortid() }}</a></td>
     </tr>
     <tr>
       <th scope="row">状态</th>
