--- a/sails-bin/templates/market/explore.html
+++ b/sails-bin/templates/market/explore.html
@@ -29,7 +29,7 @@
             {% when None %}
             {% endmatch %}
             <div class="card-body">
-              <h5 class="card-title"><a href="/market/book_info?book_id={{ book.0.get_id() }}">{{book.0.get_prodname()}}</a></h5>
+              <h5 class="card-title"><a href="{{ uri!("/market", crate::market::book_page_owned(book.0.get_id())) }}">{{book.0.get_prodname()}}</a></h5>
               <p class="card-text">价格: {{book.0.get_price()}}</p>
             </div>
 	  </div>
