--- a/sails-bin/templates/root/root.html
+++ b/sails-bin/templates/root/root.html
@@ -27,12 +27,12 @@
       <tbody>
 	{% for user in users %}
 	<tr>
-	  <th scope="row"><a href="/user?user_id={{user.get_id()}}">{{ user.get_id() }}</a></th>
+	  <th scope="row"><a href="{{ uri!("/user", crate::user::portal_guest(user.get_id())) }}">{{ user.get_id() }}</a></th>
 	  <td>{{user.get_name()}}</td>
 	  <td>{{user.get_school()}}</td>
 	  <td>{{ "{:?}"|format(user.get_validated()) }}</td>
-	  <td><a href="/root/activate_user?user_id={{user.get_id()}}" class="btn btn-success" role="button"><i class="bi bi-key-fill"></i></a> <a href="/root/user_status?user_id={{user.get_id()}}" class="btn btn-primary" role="button">Sts</a></td>
-	  <td><a href="/root/delete_user?user_id={{user.get_id()}}" class="btn btn-danger" role="button" onclick="return confirm('Please confirm your action');">Delete</a>
+	  <td><a href="{{ uri!("/root", crate::root::activate_user(user.get_id())) }}" class="btn btn-success" role="button"><i class="bi bi-key-fill"></i></a> <a href="{{ uri!("/root", crate::root::user_status(user.get_id())) }}" class="btn btn-primary" role="button">Sts</a></td>
+	  <td><a href="{{ uri!("/root", crate::root::delete_user(user.get_id())) }}" class="btn btn-danger" role="button" onclick="return confirm('Please confirm your action');">Delete</a>
 	</tr>
 	{% endfor %}
       </tbody>
