--- a/sails-bin/templates/market/explore.html
+++ b/sails-bin/templates/market/explore.html
@@ -30,7 +30,7 @@
             {% endmatch %}
             <div class="card-body">
               <h5 class="card-title"><a href="{{ uri!("/market", crate::market::book_page_owned(book.0.get_id())) }}">{{book.0.get_prodname()}}</a></h5>
-              <p class="card-text">价格: {{book.0.get_price()}}</p>
+              <p class="card-text"><b>价格: ¥{{book.0.get_price()}}</b> <del>原价：¥{{book.2.get_price()}}</del></p>
             </div>
 	  </div>
 	</div>
