--- a/sails-bin/templates/orders/order_info_seller_or_admin.html
+++ b/sails-bin/templates/orders/order_info_seller_or_admin.html
@@ -41,11 +41,19 @@
     </div>
 <br>
 <div class="p-5 rounded shadow">
-      <table class="table table-hover">
+    <table class="table table-hover">
     <tbody>
     <tr>
-      <th scope="row">价格</th>
-      <td>CN¥ {{ book.get_price() }}</td>
+      <th scope="row">总价</th>
+      <td>CN¥ {{ order.get_total() }}</td>
+    </tr>
+    <tr>
+      <th scope="row">单价</th>
+      <td>CN¥ {{ order.get_price() }}</td>
+    </tr>
+    <tr>
+      <th scope="row">购买数量</th>
+      <td>{{ order.get_quantity() }}</td>
     </tr>
     <tr>
       <th scope="row">卖家</th>
