--- a/sails-bin/templates/market/book_info_guest.html
+++ b/sails-bin/templates/market/book_info_guest.html
@@ -35,6 +35,10 @@
       <td>CN¥ {{ book.get_price() }}</td>
     </tr>
     <tr>
+      <th scope="row">库存数量</th>
+      <td>{{ book.get_quantity() }}</td>
+    </tr>
+    <tr>
       <th scope="row">官方指导价</th>
       	{% match category %}
 	{% when Some with (ctg) %}
