--- a/sails-bin/templates/market/post_book.html
+++ b/sails-bin/templates/market/post_book.html
@@ -34,7 +34,14 @@
     <div class="form-group row">
       <label for="inputPrice" class="col-sm-2 col-form-label">价格</label>
       <div class="col-sm-4">
-        <input type="number" min="0" class="form-control" id="inputPrice" placeholder="Price" name="price">
+        <input type="number" min="1" class="form-control" id="inputPrice" placeholder="Price" name="price">
+      </div>
+    </div>
+    <br>
+    <div class="form-group row">
+      <label for="inputQuantity" class="col-sm-2 col-form-label">数量</label>
+      <div class="col-sm-4">
+        <input type="number" min="1" class="form-control" id="inputPrice" placeholder="Quantity" name="quantity">
       </div>
     </div>
     <br>
