--- a/sails-bin/templates/market/update_book.html
+++ b/sails-bin/templates/market/update_book.html
@@ -46,7 +46,7 @@
     <div class="form-group row">
       <label for="inputQuantity" class="col-sm-2 col-form-label">数量</label>
       <div class="col-sm-4">
-        <input type="number" min="1" class="form-control" id="inputPrice" placeholder="Quantity" value="{{ book.get_quantity() }}" name="quantity">
+        <input type="number" min="1" class="form-control" id="inputQuantity" placeholder="Quantity" value="{{ book.get_quantity() }}" name="quantity">
       </div>
     </div>
     <br>
