--- a/sails-bin/templates/orders/order_info_seller_or_admin.html
+++ b/sails-bin/templates/orders/order_info_seller_or_admin.html
@@ -56,6 +56,10 @@
       <td>{{ order.get_quantity() }}</td>
     </tr>
     <tr>
+      <th scope="row">买家收货地址</th>
+      <td>{{ order.get_address() }}</td>
+    </tr>
+    <tr>
       <th scope="row">卖家</th>
       <td>{{ book.get_seller_id() }}</td>
     </tr>
