--- a/sails-bin/templates/market/book_info_owned.html
+++ b/sails-bin/templates/market/book_info_owned.html
@@ -24,5 +24,5 @@
 <a href="{{ uri!("/market", crate::market::update_book_page(self.book.get_id())) }}" class="btn btn-primary" role="button">更新</a>
 <a href="{{ uri!("/market", crate::market::instruction(self.book.get_id())) }}" class="btn btn-warning" role="button">指南</a>
 <a href="{{ uri!("/market", crate::market::delete_book(self.book.get_id())) }}" class="btn btn-danger" role="button" onclick="return confirm('Please confirm your action');">删除</a>
-<a href="{{ uri!("/orders", crate::orders::purchase(self.book.get_id())) }}" class="btn btn-primary" role="button" onclick="return confirm('Do you really want to purchase it?');"><i class="bi bi-credit-card"></i> 购买</a>
+<a href="{{ uri!("/orders", crate::orders::checkout(self.book.get_id())) }}" class="btn btn-primary" role="button"><i class="bi bi-credit-card"></i> 购买</a>
 {% endblock actions %}
