--- a/sails-bin/templates/orders/order_info.html
+++ b/sails-bin/templates/orders/order_info.html
@@ -74,6 +74,10 @@
       <td>{{ order.get_quantity() }}</td>
     </tr>
     <tr>
+      <th scope="row">买家收货地址</th>
+      <td>{{ order.get_address() }}</td>
+    </tr>
+    <tr>
       <th scope="row">卖家</th>
       <td>{{ book.get_seller_id() }}</td>
     </tr>
