optimize databse usages and add tag description

--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -64,6 +64,9 @@
     $('.navbar-collapse a').click(() => {
         $(".navbar-collapse").collapse('hide');
     });
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    });
   </script>
   {% endblock script %}
   <br>
