preliminary store page

--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -40,7 +40,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarItems">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="/market">书店</a></li>
+            <li class="nav-item"><a class="nav-link" href="/store">Store</a></li>
+            <li class="nav-item"><a class="nav-link" href="/market">书本市场</a></li>
             <li class="nav-item"><a class="nav-link" href="/messages">消息</a></li>
 	    <li class="nav-item"><a class="nav-link" href="/user">主页</a></li>
 	    {% block navbutton %}{% endblock navbutton %}
