--- a/sails-bin/templates/index.html
+++ b/sails-bin/templates/index.html
@@ -19,7 +19,7 @@
       <h1>我们有何不同？</h1>
       <div class="row">
 	<div class="col-sm mt-3">
-	  <div class="card">
+	  <div class="card h-100">
 	    <div class="card-body">
 	      <h3 class="card-title">高效</h3>
               <p class="card-text">您只需要上架或下单书本，一切都会准备就续。FLibrary 会帮您确认收款并运送书本。同时所有您购买的书本都在仓库即刻可取，无需等待几个月的海运。</p>
@@ -28,7 +28,7 @@
 	</div>
 
 	<div class="col-sm mt-3">
-	  <div class="card">
+	  <div class="card h-100">
 	    <div class="card-body">
 	      <h3 class="card-title">低价</h3>
               <p class="card-text">大部分的书本价格都在原价的 70% 甚至更低，同时内页完整崭新。与订购新书新书相比，我们的书本能为您节省大量开支。</p>
@@ -37,7 +37,7 @@
 	</div>
 
 	<div class="col-sm mt-3">
-	  <div class="card">
+	  <div class="card h-100">
 	    <div class="card-body">
 	      <h3 class="card-title">安全</h3>
               <p class="card-text">所有的书本都包装完整贴有封条并安全地存放在学校的仓库内。同时我们的系统拥有高标准的密码学保护并接入了支付宝，竭尽全力保障您的账号和钱款安全。</p>
