--- a/sails-bin/templates/market/all_books.html
+++ b/sails-bin/templates/market/all_books.html
@@ -5,7 +5,7 @@
 {% block content %}
 <main class="container">
   <div class="p-5 rounded shadow">
-    <h1>欢迎来到书店</h1>
+    <h1>欢迎来到书本市场</h1>
     <p class="lead">在这里您可以看到用户们上架的书，您也可以自己上架书本</p>
     <a href="{{ uri!("/search", crate::search::categories_all) }}" class="btn btn-primary" role="button">通过类别搜索</a>
     <a href="explore?table=false" class="btn btn-success" role="button">卡片视图</a>
