--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -34,7 +34,7 @@
    <div id="content-wrap">
    <nav class="navbar sticky-top navbar-expand-md navbar shadow-sm bg-white">
       <div class="container">
-        <a class="navbar-brand" href="/">FLibrary</a>
+        <a class="navbar-brand" href="/"><img src="/static/logo.png" alt="FLibrary" height="35" width="35"></a>
         <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarItems">
           <span class="navbar-toggler-icon"></span>
         </button>
