--- a/sails-bin/templates/store/home.html
+++ b/sails-bin/templates/store/home.html
@@ -18,7 +18,9 @@
 	  <div class="card h-100">
 	    {% match product.1 %}
 	    {% when Some with (img) %}
-	    <img src="{{img}}?size=thumbnail" loading="lazy" class="card-img-bottom">
+	    <a href="{{ uri!("/market", crate::market::book_page_owned(product.0.get_id())) }}">
+	      <img src="{{img}}?size=thumbnail" loading="lazy" class="card-img-bottom">
+            </a>
             {% when None %}
             {% endmatch %}
             <div class="card-body">
