refined admin order info page

--- a/sails-bin/templates/admin/orders.html
+++ b/sails-bin/templates/admin/orders.html
@@ -25,7 +25,7 @@
       <tbody>
 	{% for order in paid_tx %}
 	<tr>
-	  <th scope="row"><a href="{{ uri!("/orders", crate::orders::order_info_buyer(order.1.get_id())) }}">{{order.1.get_shortid()}}</a></th>
+	  <th scope="row"><a href="{{ uri!("/admin", crate::admin::order_info(order.1.get_id())) }}">{{order.1.get_shortid()}}</a></th>
 	  <td><a href="{{ uri!("/market", crate::market::book_page_owned(order.1.get_product())) }}">{{order.0.get_shortid()}}</a></td>
 	  <td>{{order.0.get_prodname()}}</td>
 	  <td>{{order.1.get_buyer()}}</td>
@@ -59,7 +59,7 @@
       <tbody>
 	{% for order in placed_tx %}
 	<tr>
-	  <th scope="row"><a href="{{ uri!("/orders", crate::orders::order_info_buyer(order.1.get_id())) }}">{{order.1.get_shortid()}}</a></th>
+	  <th scope="row"><a href="{{ uri!("/admin", crate::admin::order_info(order.1.get_id())) }}">{{order.1.get_shortid()}}</a></th>
 	  <td><a href="{{ uri!("/market", crate::market::book_page_owned(order.1.get_product())) }}">{{order.0.get_shortid()}}</a></td>
 	  <td>{{order.0.get_prodname()}}</td>
 	  <td>{{order.1.get_buyer()}}</td>
@@ -92,7 +92,7 @@
       <tbody>
 	{% for order in refunded_tx %}
 	<tr>
-	  <th scope="row"><a href="{{ uri!("/orders", crate::orders::order_info_buyer(order.1.get_id())) }}">{{order.1.get_shortid()}}</a></th>
+	  <th scope="row"><a href="{{ uri!("/admin", crate::admin::order_info(order.1.get_id())) }}">{{order.1.get_shortid()}}</a></th>
 	  <td><a href="{{ uri!("/market", crate::market::book_page_owned(order.1.get_product())) }}">{{order.0.get_shortid()}}</a></td>
 	  <td>{{order.0.get_prodname()}}</td>
 	  <td>{{order.1.get_buyer()}}</td>
@@ -126,7 +126,7 @@
       <tbody>
 	{% for order in finished_tx %}
 	<tr>
-	  <th scope="row"><a href="{{ uri!("/orders", crate::orders::order_info_buyer(order.1.get_id())) }}">{{order.1.get_shortid()}}</a></th>
+	  <th scope="row"><a href="{{ uri!("/admin", crate::admin::order_info(order.1.get_id())) }}">{{order.1.get_shortid()}}</a></th>
 	  <td><a href="{{ uri!("/market", crate::market::book_page_owned(order.1.get_product())) }}">{{order.0.get_shortid()}}</a></td>
 	  <td>{{order.0.get_prodname()}}</td>
 	  <td>{{order.1.get_buyer()}}</td>
