--- a/sails-bin/templates/admin/order_info_admin.html
+++ b/sails-bin/templates/admin/order_info_admin.html
@@ -3,7 +3,7 @@
 {% block content %}
 <main class="container">
     <div class="p-5 rounded shadow">
-      <h1>您的订单 #{{ order.get_shortid() }} 的细节</h1>
+      <h1>订单 #{{ order.get_shortid() }} 的细节</h1>
       <br>
       {% match order.get_transaction_status() %}
       {% when sails_db::enums::TransactionStatus::Refunded %}
@@ -12,50 +12,27 @@
       </div>
       <br>
       <h3>订单已退款（已取消）</h3>
-      如果您认为订单信息有误，请点击下方“更新”按钮<br>
-      <a href="{{ uri!("/orders", crate::orders::progress(self.order.get_id())) }}" class="btn btn-primary" role="button">更新</a>
 
       {% when sails_db::enums::TransactionStatus::Placed %}
       <div class="progress">
 	<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%"></div>
       </div>
       <br>
-      <h3>您已成功下单</h3>
-      使用支付宝扫描下方二维码或点击下方按钮来付款，然后请点击下一步<br>
-      <br>
-
-      {% match resp.as_ref().unwrap() %}
-      {% when Ok with (resp) %}
-      <div class="alert alert-warning" role="alert">
-	注意：<b>请在扫码后三小时内付款。</b>
-      </div>
-      <center><div id="qrcode"></div></center><br>
-      <a href="alipays://platformapi/startapp?appId=20000067&url={{urlencoding::encode(resp.qr_code)}}" class="btn btn-primary" role="button">使用支付宝支付</a>
-      {% when Err with (err) %}
-      <div class="alert alert-warning" role="alert">
-	<b>创建交易错误，请联系客服</b>: {{ err }}
-      </div>
-      {% endmatch %}
-      <a href="{{ uri!("/orders", crate::orders::progress(self.order.get_id())) }}" class="btn btn-success" role="button">下一步</a>
-      <a href="{{ uri!("/orders", crate::orders::user_cancel_order(self.order.get_id())) }}" class="btn btn-danger" role="button" onclick="return confirm('您确认取消订单吗？这无法撤消。');">取消订单</a>
+      <h3>成功下单</h3>
 
       {% when sails_db::enums::TransactionStatus::Paid %}
       <div class="progress">
 	<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" style="width: 66%"></div>
       </div>
       <br>
-      <h3>您已成功付款</h3>
-      感谢您的付款！接下来您只需要等待我们为您配送书本。或者您可以用订单 ID: <code>{{ order.get_shortid() }}</code> 来我们的仓库自提书本。
-      <br>
-      <a href="{{ uri!("/orders", crate::orders::user_cancel_order(self.order.get_id())) }}" class="btn btn-danger" role="button" onclick="return confirm('您确认退款吗？这无法撤消。');">取消订单并退款</a>
+      <h3>已成功付款</h3>
 
       {% when sails_db::enums::TransactionStatus::Finished %}
       <div class="progress">
 	<div class="progress-bar bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
       </div>
       <br>
-      <h3>恭喜，您的订单已成功交付！</h2>
-      Enjoy your book! 如有任何疑问或需要售后服务，请联系我们寻求帮助。
+      <h3>订单已成功交付</h2>
       {% endmatch %}
     </div>
 <br>
@@ -95,7 +72,7 @@
       <td>{{ order.get_time_sent() }}</td>
     </tr>
     <tr>
-      <th scope="row">订单状态</th>
+      <th scope="row">状态</th>
       <td>{{ "{:?}"|format(order.get_transaction_status()) }}</td>
     </tr>
     </tbody>
@@ -103,15 +80,3 @@
   </div>
 </main>
 {% endblock content %}
-
-{% block script %}
-{% call super()%}
-  {% if resp.is_some() %}
-  {% if resp.as_ref().unwrap().is_ok() %}
-  <script type="text/javascript">
-    var qrcode = new QRCode("qrcode");
-    qrcode.makeCode("{{resp.as_ref().unwrap().as_ref().unwrap().qr_code}}");
-  </script>
-  {% endif %}
-  {% endif %}
-{% endblock script %}
