remove official tag from built-in tags

--- a/sails-bin/templates/market/explore.html
+++ b/sails-bin/templates/market/explore.html
@@ -56,10 +56,12 @@
 	{% endfor %}
     </div>
   </div>
+  <br>
   {% endif %}
 
   {% if books.len() > 0 %}
   <div class="p-5 rounded shadow">
+    <h1>所有书本</h1>
     <div class="row grid">
 	{% for book in books %}
 	<div class="col-sm-6 col-lg-4 mb-4 grid-item">
